# seferim-agi-g16

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  continuous_learn.sh
.github/: FUNDING.yml
apps/agi_bridge_v2/: main.cpp  main_streaming.cpp
apps/agi_core/: main.cpp
apps/agi_loop/: main.cpp
apps/agi_opt/: main.cpp
apps/agi_profile/: main.cpp
apps/agi_step/: main.cpp
bindings/: README.md
bindings/c/: abi.cpp  abi.h
bindings/csharp/: README.md
bindings/java/: README.md
bindings/julia/: README.md
bindings/node/: README.md  binding.gyp  index.js
bindings/node/src/: addon.cc
bindings/ruby/: README.md
bindings/rust/: Cargo.toml
bindings/swift/: README.md
config/: api_topics.csv  family_map.csv  roots.txt  tuned_weights_v2.env
dashboard/: index.html  package.json  vite.config.js
dashboard/server/: index.js
dashboard/src/: main.jsx  seferim_dashboard_v3.jsx  seferim_dashboard_v3_raw.jsx
docs/: ARCHITECTURE.md  BLUEPRINT_EXECUTION.md  BUILD_AND_RUN.md  NAMES.md
include/: g16_v2_core.h  g16_v2_types.h  seferim_binary.h
include/common/: g16_core.hpp  layers.hpp  params.hpp  weights.hpp
src/common/: g16_core.cpp
src/seferim/: allocator.cpp  seferim_federation.cpp
tests/: g16_core_tests.cpp  test_g16_v2.cpp
tools/: auto_run.sh  auto_run_v2.sh  multi_api_feeder.js  run_demo.sh  wiki_feeder.js
tools/api_indexer/: go.mod  main.go
tools/check_signals/: go.mod  main.go
tools/memory_indexer/: go.mod  main.go
tools/merge_indices/: go.mod  main.go
tools/signals_from_index/: go.mod  main.go
(+1 files in other folders)
